@@ -1,17 +1,14 @@
 package raisetech.student.management.controller;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Controller;
+import org.springframework.http.ResponseEntity;
 import org.springframework.ui.Model;
-import org.springframework.validation.BindingResult;
 import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.ModelAttribute;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 import raisetech.student.management.controller.converter.StudentConverter;
@@ -20,11 +17,11 @@ import raisetech.student.management.data.StudentCourses;
 import raisetech.student.management.domain.StudentDetail;
 import raisetech.student.management.service.StudentService;
 
-@Controller
+@RestController
 public class StudentController {
 
-  private StudentService service;
-  private StudentConverter converter;
+  private final StudentService service;
+  private final StudentConverter converter;
 
   @Autowired
   public StudentController(StudentService service, StudentConverter converter) {
@@ -33,12 +30,17 @@ public class StudentController {
   }
 
   @GetMapping("/studentList")
-  public String getStudentList(Model model) {
+  public List<StudentDetail> getStudentList() {
     List<Student> students = service.searchStudentList();
     List<StudentCourses> studentCourses = service.searchStudentCourseList();
+    return converter.convertStudentDetails(students, studentCourses);
+  }
 
-    model.addAttribute("studentList", converter.convertStudentDetails(students, studentCourses));
-    return "studentList";
+  // Uuidから個人検索
+  @GetMapping("/student/{studentUuid}")
+  public StudentDetail getStudent(@PathVariable String studentUuid) {
+    StudentDetail studentDetail = service.searchStudent(studentUuid);
+    return service.searchStudent(studentUuid);
   }
 
   @GetMapping("/studentCourseList")
@@ -49,29 +51,21 @@ public class StudentController {
   @GetMapping("/newStudent")
   public String newStudent(Model model) {
     StudentDetail studentDetail = new StudentDetail();
-    studentDetail.setStudentCourses(Arrays.asList(new StudentCourses()));
+    studentDetail.setStudentCourses(List.of(new StudentCourses()));
     model.addAttribute("studentDetail", studentDetail);
     return "registerStudent";
   }
 
+  // 新規受講生情報を登録する処理を実装する。
   @PostMapping("/registerStudent")
-  public String registerStudent(@ModelAttribute StudentDetail studentDetail, BindingResult result) {
-    if (result.hasErrors()) {
-      return "registerStudent";
-    }
-    // 新規受講生情報を登録する処理を実装する。
-    // ＜いらない？＞StudentDetail → Student に変換
-    // ＜いらない？＞Student student = converter.convertToStudent(studentDetail);
-
+  public ResponseEntity<StudentDetail> registerStudent(@RequestBody StudentDetail studentDetail) {
     // Service に渡して DB に登録
-    service.registerStudent(studentDetail);
-
-    return "redirect:/studentList"; // 登録後、一覧ページに戻る
+    StudentDetail responseStudentDetail = service.registerStudent(studentDetail);
+    return ResponseEntity.ok(responseStudentDetail);
   }
 // ============================================================
 // 🔽 編集画面表示
 // ============================================================
-
   // 先生のコードはこう
   // @GetMapping("/student/{id")
   // public String getStudent(@PathVariable String id, Model model) {
@@ -82,17 +76,14 @@ public class StudentController {
 
   @GetMapping("/editStudent")
   public String editStudent(@RequestParam("uuid") String uuid, Model model) {
-
     // 全件取得（WHERE なし想定）
     List<Student> students = service.searchStudentList();
     List<StudentCourses> studentCourses = service.searchStudentCourseList();
-
     // 対象 Student 抽出
     Student target = students.stream()
         .filter(s -> uuid.equals(s.getStudentUuid()))
         .findFirst()
         .orElseThrow(() -> new RuntimeException("Student not found"));
-
     // 対象のコース抽出
     List<StudentCourses> targetCourses = studentCourses.stream()
         .filter(c -> uuid.equals(c.getStudentUuid()))
@@ -102,25 +93,17 @@ public class StudentController {
     StudentDetail detail = new StudentDetail();
     detail.setStudent(target);
     detail.setStudentCourses(targetCourses);
-
     // 画面に渡す
     model.addAttribute("studentDetail", detail);
-
     return "updateStudent"; // ← 更新画面
   }
 
-// ============================================================
+  // ============================================================
 // 🔽 更新処理
 // ============================================================
-
   @PostMapping("/updateStudent")
-  public String updateStudent(@ModelAttribute StudentDetail studentDetail, BindingResult result) {
-    if (result.hasErrors()) {
-      return "updateStudent";
-    }
-
+  public ResponseEntity<String> updateStudent(@RequestBody StudentDetail studentDetail) {
     service.updateStudent(studentDetail);
-
-    return "redirect:/studentList";
+    return ResponseEntity.ok("更新処理が成功しました。");
   }
 }
